--- a/src/components/next/layouts/navigation/navigation.module.css
+++ b/src/components/next/layouts/navigation/navigation.module.css
@@ -66,7 +66,6 @@ nav li:focus-within {
   position: absolute;
   visibility: visible;
   opacity: 1;
-  margin-top: 0;
   width: 100%;
 }
 
